--- a/munkaim.html
+++ b/munkaim.html
@@ -26,13 +26,13 @@
     <div class="munkaim">Szakmai szinten nincsenek egyenlőre komolyabb munkáim, <br> a kevésbé komolyabbakat azonban büszkén mutatom be:</div>
 
 
-    <div ><img class="szelepkep" src="css/szelep.jpg" alt="szelep" width="302" height="403" "></div>
+    <div ><img class="szelepkep" src="szelep.jpg" alt="szelep" width="302" height="403" "></div>
     <div class="szelepszoveg">Áteresztőszelep 1 1/4, műszaki tervrajz, 2020. </div>
 
-    <div ><img class="fogantyukep" src="css/fogantyu.jpg" alt="foganytú" width="302" height="403"></div>
+    <div ><img class="fogantyukep" src="fogantyu.jpg" alt="foganytú" width="302" height="403"></div>
     <div class="fogantyuszoveg">Franciakulcs fogantyú, műszaki tervrajz, 2020. </div>
 
-    <div ><img class="tarcsakep" src="css/tarcsa.jpg" alt="tárcsa" width="302" height="403"></div>
+    <div ><img class="tarcsakep" src="tarcsa.jpg" alt="tárcsa" width="302" height="403"></div>
     <div class="tarcsaszoveg">Ékszíjtárcsa, műszaki tervrajz, 2020. </div>
 
     </main>
