--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<main class="udvozlet">
 		<div
-		 class="udvozlet1">Üdvözöllek a honlapomon!&nbsp; &nbsp;<img class="profil"src="css/profil.jpg" ; alt="profil" width="310" height="310" ></div
+		 class="udvozlet1">Üdvözöllek a honlapomon!&nbsp; &nbsp;<img class="profil"src="profil.jpg" ; alt="profil" width="310" height="310" ></div
 		 >
 		 <div class="udvozlet2">Csíkszentmihályi Márk vagyok, <br> a Budapesti Műszaki és Gazdaságtudományi Egyetem <br> elsőéves gépészmérnök hallgatója. <br><br><br></div>
 		 <div class="alul">
