--- a/hogyankeszult.html
+++ b/hogyankeszult.html
@@ -30,7 +30,7 @@
 
       </div>
 
-      <div ><img class="hogyankep" src="hogyan.jpg" alt="tervrajz" width="764" height="322"></div>
+      <div ><img class="hogyankep" src="hogyan.JPG" alt="tervrajz" width="764" height="322"></div>
 
       <div class="keszultszoveg">
 
@@ -39,7 +39,7 @@
           <br>
           A további három oldal stílusánál természetesen szem előtt tartottam, hogy a kezdőlapéhoz, illetve egymáshoz is hasonlóak legyenek, majd ez alapján papírra vetettem a "Munkáim" és a "Bemutatkozás" általam elképzelt - nem túl bonyolult - elrendezését:
       </div>
-       <div ><img class="keszultkep" src="keszult.jpg" alt="tervrajz" width="764" height="322"></div>
+       <div ><img class="keszultkep" src="keszult.JPG" alt="tervrajz" width="764" height="322"></div>
 
        <div class="hogyankeszultszoveg">
          Az eredeti tervekhez képest az email küldésére való hivatkozást is módosítottam egyszerűsítés céljából, csak a kezdőoldalon jelenik meg.<br><br>
